minor fix on figure referencing

--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -606,7 +606,7 @@ Less formally, N is independent on what happens after $X_n$.
 	\end{align}
 	\subsubsection*{Ex 3.6}
 	For $i = 1 \dots n$ I have an indep. PP $\rightarrow X_i(t)$ is an i.i.d. PP($\lambda$).\\
-	The problem asks to find the first time such that there is at least one event  in every process, see figure\ref{fig:3.6}
+	The problem asks to find the first time such that there is at least one event  in every process, see \Fig{fig:3.6}
 	\begin{figure}[h]
 	\centering
 	\includegraphics[width =0.6\textwidth]{Cri_Ex3_6.jpg}
