Errors I didn't notice before

--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -423,7 +423,7 @@ Less formally, N is independent on what happens after $X_n$.
 	\eeq
 	Where the second equation brings to the espressions $\frac{M(t)}{t} > \frac{1}{\mu} - \frac{1}{t}$ and $\lim_{t \to \infty} \frac{M(t)}{t} \geq \frac{1}{\mu}$
 
-	\textbf{NOTE}: In the book the notation has also the expression \textit{"lim \textbf{inf}"} since, in this way, the demonstration is "easier" to do, in fact we can also see graphically that the $inf$ expression guarantees that we have a lower bound. []\Fig{fig:graph1}]
+	\textbf{NOTE}: In the book the notation has also the expression \textit{``lim \textbf{inf}''} since, in this way, the demonstration is ``easier'' to do, in fact we can also see graphically that the $inf$ expression guarantees that we have a lower bound. [\Fig{fig:graph1}]
 	\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\textwidth]{Cri_graph1.jpg}
@@ -474,7 +474,7 @@ Less formally, N is independent on what happens after $X_n$.
 	\beq
 	\lim_{t \to \infty} sup \frac{M(t)}{t} \leq \lim_{c \to \infty} \frac{1}{\mu^c}
 	\eeq
-	where $\mu^c = \int_0^c(1-F(x))\,dx$, so as $c \to \infty$ we see that $\mu^c \to \mu = \int_0^{+\infty}(1-F(x))\,dx$. [See \Fig{fig:mu}]
+	where $\mu^c = \int_0^c(1-F(x))\,dx$, so as $c \to \infty$ we see that $\mu^c \to \mu = \int_0^{+\infty}(1-F(x))\,dx$. [ \Fig{fig:mu}]
 	\begin{figure}
 	\centering
 	\includegraphics[width = 0.5\textwidth]{Cri_mu.jpg}
