fixed header long title on section 6 (GBN)

--- a/network_modeling/gbn_analysis.tex
+++ b/network_modeling/gbn_analysis.tex
@@ -120,6 +120,7 @@ As before: $\varphi(s) = [I - z\psi(s)]^{-1} \rightarrow \varphi(s,n)=[\psi(s)]^
 
 
 \chapter{Go Back N protocol with limited retransmissions}
+\chaptermark{GBN protocol with limited RETX} %shorten title on header
 Suppose a system governed by the Go Back N protocol.
 In this system the \gls{rtt} take m slot and when a received packet is wrong, it's retransmitted, until the $N^{th}$ failure, after which the packet is discarded.
 
