--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -438,7 +438,15 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	If 2 is $A(\beta)$ there is no conclusion (no intersection). If, instead, 1 is $A(\beta)$ there is one intersection, that intersection is the solution and the chain is positive recurrent with $\pi_k = (1-\beta^*)(\beta^*)^k$.\\
 	The third possibility is $\beta^* = 1$ and the curve is tangent. Coming from below, $A^{'}(1)>1$, therefore $\frac{\mu}{\lambda}>1$. We know from queing theory that the condition $\lambda < \mu$ is a sufficient condition for the stability of the chain. In this example, we are not able to find a solution if $\lambda > \mu$, in principle there should be no conclusion, but we know there is no solution from queing theory.
 
-
+\subsection*{Periodic case for average first return time}
+We discussed, so far, only an aperiodic MC: the case where $P_{ii}^{(n)}=0$ if n is not a multiple of the period implies no convergence, which means that the MC has an oscillatory behaviour. Let's now consider $d$ the period s.t. $P_{ii}^{(m \cdot d)}\neq 0~\forall m\in \N $ (we take into account only positive values). The average first return time ($m_i$) can be calculated as
+\begin{equation}
+	\lim_{m\to+\infty} P_{ii}^{(m \cdot d)} = \frac{d}{m_i}
+\end{equation}
+We can ignore the $d$ value if we calculate:
+\begin{equation}
+	\lim_{n\to+\infty}\left[\frac{1}{n}\sum\limits_{k=0}^{n-1} P_{ii}^{(k)} = \frac{1}{m_i}\right]
+\end{equation}
 	\begin{definition}[lesson 22/03/17] \label{def:falling_probability}
 		Given a recurrent class $C$ and a transient state $i \notin C$, the probability of entering in that class through state $k \in C$ at step $n$ can be written as
 		$$ \pi_{ik}^{(n)}(C) = \prob[X_n = k \in C, x_l \notin C ~ \forall l=1, ..., n-1 | X_0 = i] $$
